Fix scrollbar

--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     justify-content: space-between;
     display: flex;
     flex-direction: column;
